[package]
name = "libp2p-bitswap"
version = "0.25.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2021"
resolver = "2"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
default = ["metrics"]
compat = ["quick-protobuf", "asynchronous-codec"]
wasm-bindgen = ["libp2p/wasm-bindgen"]
metrics = ["dep:prometheus", "dep:lazy_static"]

[dependencies]
async-trait = "0.1.52"
asynchronous-codec = { version = "0.7.0", optional = true }
fnv = "1.0.7"
futures = "0.3.19"
lazy_static = { version = "1.4.0", optional = true }
libipld = { version = "0.16.0", default-features = false }
libp2p = { version = "0.56", features = ["request-response"] }
prometheus = { version = "0.13.0", optional = true }
quick-protobuf = { version = "0.8.1", optional = true }
thiserror = "1.0.30"
tracing = "0.1.29"
unsigned-varint = { version = "0.7.1", features = ["futures", "std"] }

[dev-dependencies]
tokio = { version = "1.38", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "time"] }
env_logger = "0.9.0"
libipld = { version = "0.16.0", default-features = false, features = ["dag-cbor"] }
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "rsa", "ed25519", "tokio"] }
multihash = { version = "0.18.0", default-features = false, features = ["blake3", "sha2"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter","tracing-log"] }

[build-dependencies]
pb-rs = "0.10.0"
