[package]
name = "co-libp2p-bitswap"
version = "0.26.1"
authors = ["David Craven <david@craven.ch>", "DK <34+dk@users.noreply.1io.com>"]
edition = "2021"
resolver = "2"
description = "COKIT fork of libp2p-bitswap — Bitswap protocol with authentication, WASM support, and libp2p 0.56."
license = "MIT OR Apache-2.0"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/co-libp2p-bitswap"

[features]
default = ["metrics"]
compat = ["quick-protobuf", "asynchronous-codec"]
wasm-bindgen = ["libp2p/wasm-bindgen"]
metrics = ["dep:prometheus", "dep:lazy_static"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
asynchronous-codec = { version = "0.7.0", optional = true }
cid = "0.11.2"
fnv = "1.0.7"
futures = "0.3.19"
ipld-core = { version = "0.4.1", features = ["serde"] }
ipld-dagpb = "0.2.1"
lazy_static = { version = "1.4.0", optional = true }
libp2p = { version = "0.56", features = ["request-response"] }
multihash = "0.19.3"
multihash-codetable = { version = "0.2.1", features = ["blake3"] }
prometheus = { version = "0.13.0", optional = true }
quick-protobuf = { version = "0.8.1", optional = true }
thiserror = "1.0.30"
tracing = "0.1.29"
unsigned-varint = { version = "0.7.1", features = ["futures", "std"] }

[dev-dependencies]
tokio = { version = "1.38", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "time"] }
env_logger = "0.9.0"
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "rsa", "ed25519", "tokio"] }
serde_ipld_dagcbor = "0.6"
tracing-subscriber = { version = "0.3.5", features = ["env-filter","tracing-log"] }

[build-dependencies]
pb-rs = "0.10.0"
